--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
                 });
             });
 
+            function myFunction() {
+                alert("Hello! I am an alert box!");
+            }
+
             document.getElementById("demo").innerHTML = attr.customernumber.value;
             document.getElementById("demoone").innerHTML = "Hello World";
-
         }
-
     </script>
+
+    <button onclick="myFunction()">Try it</button>
+
 </body>
 
 </html>
