--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     top: 0,                       // optional, defaults to 0
                     left: 0                       // optional, defaults to 0
                 },
-                region: "eu-central-1",         // REQUIRED for `CHAT`, optional otherwise
+                region: "us-east-1",         // REQUIRED for `CHAT`, optional otherwise
                 softphone: {                    // optional, defaults below apply if not provided
                     allowFramedSoftphone: true,   // optional, defaults to false
                     disableRingtone: false,       // optional, defaults to false
