--- a/index.html
+++ b/index.html
@@ -45,7 +45,34 @@
                 ccpLoadTimeout: 10000 //optional, defaults to 5000 (ms)
             });
         }
+
+
+        connect.contact(function (contact) {
+
+            contact.onIncoming(function (contact) {
+            });
+
+            contact.onRefresh(function (contact) {
+            });
+
+            contact.onAccepted(function (contact) {
+            });
+
+            contact.onEnded(function () {
+            });
+
+            contact.onConnected(function () {
+                console.log(`onConnected(${contact.getContactId()})`);
+                var attributeMap = contact.getAttributes();
+                var phone = JSON.stringify(attributeMap["customernumber"]["value"]);
+                console.log(phone);
+                window.alert("Customer's phone #: " + phone);
+
+            });
+        });
+
     </script>
+
 </body>
 
 </html>
