--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             connect.contact(function (contact) {
 
                 contact.onIncoming(function (contact) {
+                    console.log(`onConnected(${contact.getContactId()})`);
+                    var attributeMap = contact.getAttributes();
+                    var phone = JSON.stringify(attributeMap["customernumber"]["value"]);
+                    console.log(phone);
+                    window.alert("Customer's phone #: " + phone);
+
                 });
 
                 contact.onRefresh(function (contact) {
