--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
             connect.contact(function (contact) {
 
                 contact.onIncoming(function (contact) {
-                    console.log(`onConnected(${contact.getContactId()})`);
-                    var attributeMap = contact.getAttributes();
-                    var phone = JSON.stringify(attributeMap["customernumber"]["value"]);
-                    console.log(phone);
-                    window.alert("Customer's phone #: " + phone);
-
                 });
 
                 contact.onRefresh(function (contact) {
@@ -74,16 +68,16 @@
                 });
 
                 contact.onConnected(function () {
-                    console.log(`onConnected(${contact.getContactId()})`);
-                    var attributeMap = contact.getAttributes();
-                    var phone = JSON.stringify(attributeMap["customernumber"]["value"]);
-                    console.log(phone);
-                    window.alert("Customer's phone #: " + phone);
-
                 });
             });
         }
 
+    </script>
+    <h2>The getElementById() Method</h2>
+    <p id="demo"></p>
+
+    <script>
+        document.getElementById("demo").innerHTML = phone;
     </script>
 
 </body>
