--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
                 });
 
                 contact.onEnded(function () {
+                    document.getElementById("demo").innerHTML = "";
                 });
 
                 contact.onConnected(function () {
                 });
             });
         }
+        //https://aws.amazon.com/premiumsupport/knowledge-center/connect-contact-attributes-screenpop/
 
     </script>
 
