--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     var phone = JSON.stringify(attributeMap["SystemNumber"]["value"]);
                     console.log(phone);
                     //window.alert("Customer's phone # (onConnecting): " + phone);
-                    document.getElementById("demo").innerHTML = phone;
+                    document.getElementById("demo").innerHTML = "SystemPhoneNumber";
 
                 });
 
