--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script type="text/javascript">
         var containerDiv = document.getElementById("container-div");
-        var instanceURL = "https://testingissueshere.my.connect.aws/connect/ccp-v2/";
+        var instanceURL = "https://testingissueshere.my.connect.aws/agent-app-v2/";
         // initialize the streams api
         function init() {
             // initialize the ccp
